# smoke_detect

./: .gitignore  README  app_config.json  gpsd_row_to_subtitle.py  gst_gps_reciever.sh  gst_gps_sender.sh  gst_recievers.sh  gst_senders.sh  gst_udpsrc2nv3dsink.sh  gst_uri_udp_src2nv3dsink.sh  gst_urisrc2filesink.sh  gst_urisrc2nv3dsink.sh  gst_urisrc2udpsink.sh  gst_urisrc2vlcplayer.sh  gst_v4l2src2nv3dsink.sh  gst_v4l2src2nv3dsink_1024x1024.sh  meson.build  segm_app_up.sh  stream.sdp
configs/: _aa_infer_descr.yml  _ab_pipeline_descr.yml  app_aa_up.sh  app_ab_infer.yml  app_ac_pipeline.yml  dstest_segmentation_config_semantic.txt  gst_mp2t.sh  gst_udpsrc2nv3dsink.sh  gst_up_pipeline.sh  gst_urisrc2filesink.sh  gst_urisrc2nv3dsink.sh  gst_urisrc2udpsink.sh  gst_v4l2src2nv3dsink.sh  gst_v4l2src2udpsink.sh  seg__semantic.txt  seg_aa_up.sh  seg_ab_infer.txt  seg_ab_infer.yml  seg_ac_infer.txt  segm_aa_infer_conf.txt  segm_aa_infer_conf_1024x1024.txt  segtest_up.sh  sources_30.csv
configs/deepsmoke/: a_config_app.yml  a_infer_primary.yml  b_config_infer_primary_desc.yml  b_config_ultimate.yml  config_infer_primary.yml  config_infer_primary_desc.yml  config_ultimate.yml  source30_1080p_dec_infer-resnet_tiled_display_int8.yml  source_smoke_1080p_tiled.yml  sources_1.csv
models/: labels_smoke.txt  model_tester.py
models/Primary_Detector/: resnet18_trafficcamnet_pruned.onnx_b2_gpu0_int8.engine  resnet18_trafficcamnet_pruned.onnx_b30_gpu0_int8.engine
src/: Makefile  app_conf_parser.c  app_conf_parser.h  callback.c  callback.h  deepstream-segmentation-app  deepstream-segmentation-custom  deepstream_segmentation_app.c  pipeline.c  pipeline.h  structs.h
streams/: gst_VideoSrt2udpsink.sh  gst_recievers.sh  gst_senders.sh
